--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "templify",
+  "name": "@isdk/templify",
   "description": "🚀 Instantly convert projects into template.",
   "version": "0.1.0",
   "author": "Riceball LEE @snowyu",
@@ -17,7 +17,6 @@
     "@oclif/plugin-plugins": "^5",
     "@reliverse/prompts": "^1.6.0",
     "custom-ability": "^2.0.1",
-    "inquirer": "^12.5.0",
     "load-config-file": "2.0.0",
     "mime-type": "^5.0.2",
     "yaml": "^2.7.0"
@@ -36,6 +35,7 @@
     "eslint": "^9",
     "eslint-config-oclif": "^6",
     "eslint-config-prettier": "^10",
+    "inquirer": "^12.5.0",
     "mocha": "^11",
     "oclif": "^4.17.41",
     "shx": "^0.3.3",
