refactor!: extract common to templify-lib

--- a/package.json
+++ b/package.json
@@ -8,19 +8,12 @@
   },
   "bugs": "https://github.com/isdk/templify.js/issues",
   "dependencies": {
-    "@inquirer/prompts": "^7.4.0",
     "@isdk/artistic-text": "^0.1.1",
-    "@isdk/glob": "^0.1.0",
-    "@isdk/template-engines": "^0.6.1",
+    "@isdk/templify-lib": "^0.3.0",
     "@oclif/core": "^4",
     "@oclif/plugin-help": "^6",
     "@oclif/plugin-plugins": "^5",
-    "@reliverse/prompts": "^1.6.0",
-    "custom-ability": "^2.0.1",
-    "isbinaryfile": "^5.0.4",
-    "load-config-file": "2.0.0",
-    "mime-type": "^5.0.2",
-    "yaml": "^2.7.0"
+    "custom-ability": "^2.0.1"
   },
   "devDependencies": {
     "@eslint/compat": "^1",
@@ -28,16 +21,12 @@
     "@eslint/js": "^9.23.0",
     "@oclif/prettier-config": "^0.2.1",
     "@oclif/test": "^4",
-    "@types/chai": "^5",
     "@types/jest": "^29.5.14",
-    "@types/mocha": "^10",
     "@types/node": "^18",
     "chai": "^5",
     "eslint": "^9",
     "eslint-config-oclif": "^6",
     "eslint-config-prettier": "^10",
-    "inquirer": "^12.5.0",
-    "mocha": "^11",
     "oclif": "^4.17.41",
     "shx": "^0.3.3",
     "terser": "^5.39.0",
