--- a/package.json
+++ b/package.json
@@ -9,32 +9,32 @@
   "bugs": "https://github.com/isdk/templify.js/issues",
   "dependencies": {
     "@isdk/artistic-text": "^0.1.1",
-    "@isdk/templify-lib": "^0.5.0",
-    "@oclif/core": "^4",
+    "@isdk/templify-lib": "^0.6.1",
+    "@oclif/core": "^4.5.2",
     "@oclif/plugin-autocomplete": "^3.2.34",
-    "@oclif/plugin-help": "^6",
-    "@oclif/plugin-plugins": "^5",
+    "@oclif/plugin-help": "^6.2.32",
+    "@oclif/plugin-plugins": "^5.4.46",
     "@oclif/plugin-version": "^2.2.32",
     "custom-ability": "^2.0.1"
   },
   "devDependencies": {
-    "@eslint/compat": "^1",
+    "@eslint/compat": "^1.3.1",
     "@eslint/eslintrc": "^3.3.1",
     "@eslint/js": "^9.32.0",
     "@oclif/prettier-config": "^0.2.1",
-    "@oclif/test": "^4",
+    "@oclif/test": "^4.1.13",
     "@types/jest": "^30.0.0",
-    "@types/node": "^24",
-    "chai": "^5",
-    "eslint": "^9",
-    "eslint-config-oclif": "^6",
-    "eslint-config-prettier": "^10",
-    "oclif": "^4.22.3",
+    "@types/node": "^24.1.0",
+    "chai": "^5.2.1",
+    "eslint": "^9.32.0",
+    "eslint-config-oclif": "^6.0.89",
+    "eslint-config-prettier": "^10.1.8",
+    "oclif": "^4.22.5",
     "shx": "^0.4.0",
     "terser": "^5.43.1",
     "tsup": "^8.5.0",
     "tsx": "^4.20.3",
-    "typescript": "^5.8.3",
+    "typescript": "~5.8",
     "typescript-eslint": "^8.38.0",
     "vite": "^7.0.6",
     "vitest": "^3.2.4"
@@ -62,12 +62,7 @@
     "hooks": {
       "command_not_found": "./dist/oclif/hooks/command-not-found"
     },
-    "plugins": [
-      "@oclif/plugin-autocomplete",
-      "@oclif/plugin-help",
-      "@oclif/plugin-plugins",
-      "@oclif/plugin-version"
-    ],
+    "plugins": [],
     "topicSeparator": " ",
     "topics": {}
   },
@@ -88,9 +83,12 @@
   "types": "dist/index.d.ts",
   "pnpm": {
     "overrides": {
-      "brace-expansion@>=1.0.0 <=1.1.11": ">=1.1.12",
-      "brace-expansion@>=2.0.0 <=2.0.1": ">=2.0.2",
-      "@eslint/plugin-kit@<0.3.3": ">=0.3.3"
-    }
+      "@isdk/templify-lib": "link:../templify-lib"
+    },
+    "onlyBuiltDependencies": [
+      "esbuild",
+      "unrs-resolver",
+      "yarn"
+    ]
   }
 }
